--- a/site/pages/data/model/index.hbs
+++ b/site/pages/data/model/index.hbs
@@ -77,6 +77,16 @@ title: SPASE Base Model
 <aside class='desktop_sidenav' id='sidenav'>
 <div class='boxed'>
 <h2>
+Project Information
+</h2>
+<ul class='side_nav'>
+	<li><a href="https://github.com/spase-group/spase-base-model">Specification</a></li>
+	<li><a href="https://github.com/spase-group/spase-base-model/wiki">Wiki</a></li>
+	<li><a href="https://github.com/spase-group/spase-base-model/issues">Issues</a></li>
+</ul>
+</div>
+<div class='boxed'>
+<h2>
 Related Items
 </h2>
 <ul class='side_nav'>
