--- a/site/pages/data/index.hbs
+++ b/site/pages/data/index.hbs
@@ -23,7 +23,7 @@ metadata which describes it.
 <p>
 While the data model is neutral on how to it may be expressed, the preferred expression form is XML.
 There are <a href="schema/index.html">XML Schema</a> documents which can be used to generate and validate SPASE 
-compliant XML documents. There is also an <a href="xsl/spase.xslt">XML Stylesheet</a> you can use to generated an HTML formatted version 
+compliant XML documents. There is also an <a href="xsl/spase.xsl">XML Stylesheet</a> you can use to generated an HTML formatted version 
 of a SPASE XML document.
 </p>
 <p>
