COrrect spelling of 'Finnish'.

--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -53,8 +53,8 @@ title: SPASE Naming Authority
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/ESA">https://github.com/hpde/ESA</a>
 				</td></tr>
 					
-				<tr><td  valign="top">FMI</td><td>Finish Meteorlogical Institute (FMI)<br>
-				Assigns resource IDs for data available from the Finish Meteorlogical Institute (FMI) Space and Earth Observation Centre<br>
+				<tr><td  valign="top">FMI</td><td>Finnish Meteorlogical Institute (FMI)<br>
+				Assigns resource IDs for data available from the Finnish Meteorlogical Institute (FMI) Space and Earth Observation Centre<br>
 				Website: <a class="ext" href="https://space.fmi.fi/">https://space.fmi.fi/</a><br>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/FMI">https://github.com/hpde/FMI</a>
 				</td></tr>
