Add 'Publications' page under 'Documents'.

--- a/site/layout/default.hbs
+++ b/site/layout/default.hbs
@@ -100,6 +100,7 @@ Space Physics Archive Search and Extract
 			<ul class='subnav'>
 				<li><a href='{{assets}}/docs/index.html' target='_self'>Overview</a></li>
 				<li><a href='{{assets}}/docs/conventions/index.html' target='_self'>Conventions</a></li>
+				<li><a href='{{assets}}/docs/publications/index.html' target='_self'>Publications</a></li>
 			</ul>
 		</div>
 	</li>
