--- a/site/pages/docs/index.hbs
+++ b/site/pages/docs/index.hbs
@@ -41,6 +41,50 @@ Additional information on using SPASE metadata and tools can be found at the <a 
 		conventions used to access data and images.</dd>
 </dl>
 
+<h2>Publications</h2>
+<p>When citing SPASE or the SPASE Information Models please use the following reference:</p>
+<dl>
+  <dd>Roberts, D. A., Thieman, J., Génot, V., King, T., Gangloff, M., Perry, C., et al. (2018). 
+  The SPASE data model: A metadata standard for registering, finding, accessing, and using Heliophysics data obtained from observations and modeling. 
+  Space Weather, 16, 1899– 1911. https://doi.org/10.1029/2018SW002038</dd>
+</dl>
+
+<h3>Select and Most Relevant</h3>
+<dl>
+	<dt>2010, Todd King, James Thieman, D Aaron Roberts</dt>
+      <dd><a href="2010-King-SPASE-2.0.pdf">SPASE 2.0: a standard data model for space physics</a></dd>
+      <dd>Earth Sci Inform 3, 67–73 (2010). https://doi.org/10.1007/s12145-010-0053-4</dd>
+	<dt>2016, Todd A King, Michel Gangloff, James Thieman, D Aaron Roberts, Darren De Zeeuw</dt>
+      <dd><a href="2016-King-Enhancements-to-the-SPASE-Metadata-Standard-poster-v1.pdf">Enhancements to the SPASE Metadata Standard: Simulations and Tools</a></dd>
+      <dd>SPASE presentation at AGU Fall Meeting, Dec 2016</dd>
+	<dt>2018, D Aaron Roberts, James Thieman, Vincent Génot, Todd King, Michel Gangloff, et al</dt> 
+      <dd><a href="https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2018SW002038">The SPASE Data Model: A Metadata Standard for Registering, Finding, Accessing, and Using Heliophysics Data Obtained From Observations and Modeling</a></dd>
+      <dd>Space Weather, Volume16, Issue12, Pages 1899-1911, December 2018</dd>
+	<dt>2021, Lee Bargatze, Todd King, D. Aaron Roberts, Shing Fung</dt>
+      <dd><a href="https://ui.adsabs.harvard.edu/abs/2021cosp...43E2380B/abstract">Spase Physics Archive Search and Extract (SPASE) the COSPAR Standard for describing Heliophysics Data Products</a></dd>
+      <dd>43rd COSPAR Scientific Assembly. Held 28 January - 4 February, 2021. Abstract PSW.4-0002-21 (oral), id.2380.</dd>
+</dl>
+
+<h3>Early Presentations</h3>
+<dl>
+	<dt>2003, Joe King, Jim Thieman, Todd King</dt>
+      <dd><a href="2003-Thieman-030326.pdf">SPASE and the Space Physics Data Dictionary</a></dd>
+      <dd>SPASE presentation before the SECDC Working Group committee. March 26, 2003</dd>
+	<dt>2003, Walker and the SPASE Consortium</dt>
+      <dd><a href="2003-Walker-041003.pdf">Toward Interoperability for Space Physics Data: The Problem and an Approach to the Solution</a></dd>
+      <dd>SPASE presentation at the EGS, AGU and EUG meeting in Nice, France. April 10, 2003</dd>
+	<dt>2005, Jim Thieman, et al</dt>
+      <dd><a href="2005-Thieman-11222005.pdf">The Space Physics Archive Search and Extract (SPASE) and the Virtual Space Physics Observatory (VSPO)</a></dd>
+      <dd>Pre-1.0.0 release presentation regarding the SPASE group and the SPASE information model. Nov 22, 2005</dd>
+	<dt>2006, C.C. Harvey, M. Gangloff, C. Jacquey, J.R. Thieman, D.A. Roberts, T. King</dt>
+      <dd><a href="2006-Harvey-ESWW3_V4.pdf">Recent developments towards a Solar System Virtual Observatory</a></dd>
+      <dd>SPASE presentation at Third European Space Weather Week, Brussels, Nov 13-17, 2006</dd>
+	<dt>2008, Todd King, Jim Thieman, D. Aaron Roberts</dt>
+      <dd><a href="2008-King-Introduction-to-SPASE.pdf">The SPASE Metadata Model: Standard Metadata for Space Science Data Description</a></dd>
+      <dd>An introduction to the SPASE information model. First presented approx. 2008</dd>
+</dl>
+
+
 <h2>Deprecated IDs</h2>
 <p>
 The original naming authorities were organized by discipline. For example, VMO represented the Virtual Magnetospheric Observatory. 
@@ -52,7 +96,6 @@ For a complete complete list of naming authorities see <a href="{{assets}}/servi
 <p>
 <a href="deprecated/index.html">List of deprecated IDs</a>
 </p>
-
 </div>
 </section>
 </article>
