Add SPASE XML viewer tool.

--- a/site/pages/tools/index.hbs
+++ b/site/pages/tools/index.hbs
@@ -17,6 +17,14 @@ title: SPASE Tools
 <p>Reference implementations and tools for working with SPASE metadata and the SPASE framework.</p>
 
 <dl>
+	<dt id="viewer"><b>Viewer</b></dt>
+		<dd>SPASE description viewer.<br><br>
+   		<dl>
+   			<dt><a href="viewer/index.html">Viewer</a></dt>
+   			<dd>View local files in a browser based SPASE description viewer. Drag and drop files into the page to view a formatted version of the SPASE XML files</dd>
+   		</dl>
+		</dd> 
+
 	<dt id="validator"><b>Validator</b></dt>
 		<dd>Determines compliance with SPASE data model.<br><br>
    		<dl>
