Add DOI references for data model and mention COSPAR recommendation in text.

--- a/site/pages/index.hbs
+++ b/site/pages/index.hbs
@@ -33,7 +33,8 @@ title: SPASE
 Get details of the SPASE <a href="data/model/index.html">Data Model</a>, which provides terms and syntax for uniform descriptions of Heliophysics resources, 
 including Observatories, Instruments, People, Repositories, and (most centrally)  Numerical Data products, An extended set of terms deals 
 with <a href="data/simulation/index.html">simulations and models</a>.  A Dictionary of the terms is provided, along with 
-the <a href="data/schema/index.html">XML schema</a> documents used to validate SPASE descriptions. </div>
+the <a href="data/schema/index.html">XML schema</a> documents used to validate SPASE descriptions. 
+Use of the SPASE <a href="data/model/index.html">base data model</a> along with the <a href="data/simulation/index.html">simulation extensions</a> are a COSPAR <a href="https://doi.org/10.1016/j.srt.2021.11.014">recommendation.</a></div>
 </div>
 </div>
 </li>
