--- a/site/pages/data/simulation/index.hbs
+++ b/site/pages/data/simulation/index.hbs
@@ -28,6 +28,7 @@ title: SPASE Simulation Extensions
 	<a href="history.html">History of changes</a>
 	</p>
 	<p><a href="search/index.html" target="_blank">Search</a> the model dictionary.</p>
+  <p>When referencing the Simulation Extensions in publications use the DOI: <a href="https://doi.org/10.48322/TXCA-X050">https://doi.org/10.48322/TXCA-X050</a></p>
 
 	{{#if draft}}
 		<p><b>Draft version:</b><br>There is a draft version of the data model which
