--- a/site/pages/spase-inside.hbs
+++ b/site/pages/spase-inside.hbs
@@ -15,7 +15,7 @@ title: SPASE Inside
 	<a href="{{assets}}/assets/images/spase-inside.png"><img src="{{assets}}/assets/images/spase-inside.png"></a>
 	</p>
 	<p>
-	Are you using SPASE? <a href="mailto:reine.a.chimiak@nasa.gov">Let us know</a>
+	Are you using SPASE? <a href="mailto:cdolan@sesda.com">Let us know</a>
 	</p>
 </header>
 
