--- a/site/pages/docs/index.hbs
+++ b/site/pages/docs/index.hbs
@@ -52,10 +52,10 @@ Additional information on using SPASE metadata and tools can be found at the <a 
 <h3>Select and Most Relevant</h3>
 <dl>
 	<dt>2010, Todd King, James Thieman, D Aaron Roberts</dt>
-      <dd><a href="2010-King-SPASE-2.0.pdf">SPASE 2.0: a standard data model for space physics</a></dd>
+      <dd><a href="publications/2010-King-SPASE-2.0.pdf">SPASE 2.0: a standard data model for space physics</a></dd>
       <dd>Earth Sci Inform 3, 67–73 (2010). https://doi.org/10.1007/s12145-010-0053-4</dd>
 	<dt>2016, Todd A King, Michel Gangloff, James Thieman, D Aaron Roberts, Darren De Zeeuw</dt>
-      <dd><a href="2016-King-Enhancements-to-the-SPASE-Metadata-Standard-poster-v1.pdf">Enhancements to the SPASE Metadata Standard: Simulations and Tools</a></dd>
+      <dd><a href="publications/2016-King-Enhancements-to-the-SPASE-Metadata-Standard-poster-v1.pdf">Enhancements to the SPASE Metadata Standard: Simulations and Tools</a></dd>
       <dd>SPASE presentation at AGU Fall Meeting, Dec 2016</dd>
 	<dt>2018, D Aaron Roberts, James Thieman, Vincent Génot, Todd King, Michel Gangloff, et al</dt> 
       <dd><a href="https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2018SW002038">The SPASE Data Model: A Metadata Standard for Registering, Finding, Accessing, and Using Heliophysics Data Obtained From Observations and Modeling</a></dd>
@@ -68,19 +68,19 @@ Additional information on using SPASE metadata and tools can be found at the <a 
 <h3>Early Presentations</h3>
 <dl>
 	<dt>2003, Joe King, Jim Thieman, Todd King</dt>
-      <dd><a href="2003-Thieman-030326.pdf">SPASE and the Space Physics Data Dictionary</a></dd>
+      <dd><a href="publications/2003-Thieman-030326.pdf">SPASE and the Space Physics Data Dictionary</a></dd>
       <dd>SPASE presentation before the SECDC Working Group committee. March 26, 2003</dd>
 	<dt>2003, Walker and the SPASE Consortium</dt>
-      <dd><a href="2003-Walker-041003.pdf">Toward Interoperability for Space Physics Data: The Problem and an Approach to the Solution</a></dd>
+      <dd><a href="publications/2003-Walker-041003.pdf">Toward Interoperability for Space Physics Data: The Problem and an Approach to the Solution</a></dd>
       <dd>SPASE presentation at the EGS, AGU and EUG meeting in Nice, France. April 10, 2003</dd>
 	<dt>2005, Jim Thieman, et al</dt>
-      <dd><a href="2005-Thieman-11222005.pdf">The Space Physics Archive Search and Extract (SPASE) and the Virtual Space Physics Observatory (VSPO)</a></dd>
+      <dd><a href="publications/2005-Thieman-11222005.pdf">The Space Physics Archive Search and Extract (SPASE) and the Virtual Space Physics Observatory (VSPO)</a></dd>
       <dd>Pre-1.0.0 release presentation regarding the SPASE group and the SPASE information model. Nov 22, 2005</dd>
 	<dt>2006, C.C. Harvey, M. Gangloff, C. Jacquey, J.R. Thieman, D.A. Roberts, T. King</dt>
-      <dd><a href="2006-Harvey-ESWW3_V4.pdf">Recent developments towards a Solar System Virtual Observatory</a></dd>
+      <dd><a href="publications/2006-Harvey-ESWW3_V4.pdf">Recent developments towards a Solar System Virtual Observatory</a></dd>
       <dd>SPASE presentation at Third European Space Weather Week, Brussels, Nov 13-17, 2006</dd>
 	<dt>2008, Todd King, Jim Thieman, D. Aaron Roberts</dt>
-      <dd><a href="2008-King-Introduction-to-SPASE.pdf">The SPASE Metadata Model: Standard Metadata for Space Science Data Description</a></dd>
+      <dd><a href="publications/2008-King-Introduction-to-SPASE.pdf">The SPASE Metadata Model: Standard Metadata for Space Science Data Description</a></dd>
       <dd>An introduction to the SPASE information model. First presented approx. 2008</dd>
 </dl>
 
