Updates to 'Connect with us' page.

--- a/site/pages/connect.hbs
+++ b/site/pages/connect.hbs
@@ -48,18 +48,10 @@ title: SPASE Connect With Us
     <p>
 The main SPASE mailing is at:
 <pre>
-    spase@listserv.gsfc.nasa.gov 
+    <a href="https://groups.io/g/spase">spase@groups.io</a>
 </pre>
-To subscribe send an e-mail to spase@listserv.gsfc.nasa.gov with
+To subscribe send an e-mail to <a href="mailto:spase+subscribe@groups.io">spase+subscribe@groups.io</a>
 
-<ul>
-    <li>Subject line blank.</li>
-    <li>a message body of:
-<pre>
-      subscribe spase your_email_address
-</pre>
-</li>
-</ul>
 Anyone is welcome to join. This is also where data model changes are first posted. There is a telecon held about twice a month. The times are announced on the "spase" Mailing list. Everyone can join the telecon and participate.
 </p>
 
@@ -67,22 +59,8 @@ Anyone is welcome to join. This is also where data model changes are first poste
 <p>
 Under the auspices of the NASA HDMC, the SPASE Metadata Working Team (SMWT) has been formed with the primary objective of applying the SPASE metadata model to document and describe all electronically-accessible heliophysics data. 
 <pre>
-    <a class="ext" href="http://www.dolanbrau.com/dev/smwt/">http://www.dolanbrau.com/dev/smwt/</a>
+    <a class="ext" href="https://hpde.gsfc.nasa.gov/smwt_home/editor_index.html"https://hpde.gsfc.nasa.gov/smwt_home/editor_index.html</a>
 </pre>
-
-<h3 id="SMWG">SPASE Metadata Working Group (SMWG)</h3>
-<p>
-The SPASE Metadata Working Group (SMWT) discusses implementation issues, mostly focused on the generation of metadata and maintaining a common top level registry. Its maintained at:
-<pre>
-    <a class="ext" href="https://github.com/hpde">https://github.com/hpde</a>
-</pre>
-Discussions can be found at:
-<pre>
-    <a class="ext" href="http://groups.google.com/group/vxo-spase-smwg?hl=en">http://groups.google.com/group/vxo-spase-smwg?hl=en</a>
-</pre>
-email: vxo-spase-smwg@googlegroups.com
-</p>
-</p>
 
 </div>
 
