Updates for issue reporting.

--- a/site/pages/data/index.hbs
+++ b/site/pages/data/index.hbs
@@ -20,7 +20,7 @@ data along with its scientific context, source, provenance, content and location
 a federated data system where data may reside at different locations and may be separated from the 
 metadata which describes it.
 </p>
-<p>Use of the SPASE <a href="model/index.html">base data model</a> along with the <a href="simulation/index.html">simulation extensions</a> are a COSPAR <a href="https://doi.org/10.1016/j.srt.2021.11.014">recommendation.</a></div>
+<p>Use of the SPASE <a href="model/index.html">base data model</a> along with the <a href="simulation/index.html">simulation extensions</a> are a COSPAR <a href="https://doi.org/10.1016/j.srt.2021.11.014">recommendation.</a>
 </p>
 <p>
 While the data model is neutral on how to it may be expressed, the preferred expression form is XML.
