--- a/site/pages/data/model/index.hbs
+++ b/site/pages/data/model/index.hbs
@@ -81,6 +81,14 @@ title: SPASE Base Model
 <aside class='desktop_sidenav' id='sidenav'>
 <div class='boxed'>
 <h2>
+Need An Update?
+</h2>
+<ul class='side_nav'>
+	<li><a href="https://github.com/spase-group/spase-base-model/issues">Request a Change</a></li>
+</ul>
+</div>
+<div class='boxed'>
+<h2>
 Project Information
 </h2>
 <ul class='side_nav'>
