--- a/site/pages/data/simulation/index.hbs
+++ b/site/pages/data/simulation/index.hbs
@@ -78,6 +78,14 @@ title: SPASE Simulation Extensions
 <aside class='desktop_sidenav' id='sidenav'>
 <div class='boxed'>
 <h2>
+Need An Update?
+</h2>
+<ul class='side_nav'>
+	<li><a href="https://github.com/spase-group/spase-sim-model/issues">Request a Change</a></li>
+</ul>
+</div>
+<div class='boxed'>
+<h2>
 Project Information
 </h2>
 <ul class='side_nav'>
