Add links to 'support' to main page and data model pages.

--- a/site/pages/data/index.hbs
+++ b/site/pages/data/index.hbs
@@ -102,6 +102,10 @@ terms from the SPASE Simulation Extension Dictionary along with terms from the B
 <div id='secondary_column'>
 <aside class='desktop_sidenav' id='sidenav'>
 	<div class='boxed'>
+	   <h2>Support</h2>
+	   <p>
+			<a href="mailto:spase-support@groups.io">Email our experts</a> (spase-support@groups.io)<br/>
+      </p>
 	   <h2>Data Model Documents</h2>
 	   <p>
 			<b><u>Base</u></b><br/>
