Changing UOLOU to UOULU *everywhere* to see if the change will stick this time

--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -173,10 +173,10 @@ priority when assigning a naming authority, as follows:
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/SMWG">https://github.com/hpde/SMWG</a>
 				</td></tr>
 					
-				<tr><td  valign="top">UOLOU</td><td>University of Oulu (UOLOU)<br>
-				Assigns resource IDs for data available from the University of Oulu (UOLOU)<br>
+				<tr><td  valign="top">UOULU</td><td>University of Oulu (UOULU)<br>
+				Assigns resource IDs for data available from the University of Oulu (UOULU)<br>
 				Website: <a class="ext" href="http://www.spase-group.org/registry">http://www.spase-group.org/registry</a><br>
-				Metadata Repository: <a class="ext" href="https://github.com/hpde/UOLOU">https://github.com/hpde/UOLOU</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/UOULU">https://github.com/hpde/UOULU</a>
 				</td></tr>
 		</table>			
 	</dd>
