Changed contact from Todd King to Shing Fung/Chuck Dolan

--- a/site/layout/default.hbs
+++ b/site/layout/default.hbs
@@ -175,7 +175,7 @@ FOLLOW SPASE:
 <div class='credits'>
 <p>
 Site manager and webmaster: 
-<a href="{{assets}}/connect.html">Todd King</a>
+<a href="{{assets}}/connect.html">Chuck Dolan</a>
 <br>
 </p>
 </div>
