--- a/site/pages/services/index.hbs
+++ b/site/pages/services/index.hbs
@@ -34,7 +34,7 @@ described in the GitHub repositories.
 	name with the SPASE group. 
   </p>
   <p>
-	To become a naming authority and register your naming authority name with SPASE contact Todd King (<a href=mailto:tking@igpp.ucla.edu>tking@igpp.ucla.edu</a>)
+	To become a naming authority and register your naming authority name with SPASE contact Shing Fung (<a href=mailto:shing.f.fung@nasa.gov>shing.f.fung@nasa.gov</a>)
   </p>
   <p>
 	<a href="naming-authority.html">Current list of naming authorities</a>
