--- a/site/pages/services/index.hbs
+++ b/site/pages/services/index.hbs
@@ -20,7 +20,7 @@ described in the GitHub repositories.
 </p>
 <section id='page_body'>
 <article class='page_body_article'>
-<section class='article_body'>
+<section class='article_body' id=' id='naming-authorty'>
 <div class='wysiwyg_content'>
 <h2>Naming Authorities</h2>
   <p>
