Repopulated the Naming Authority list using the metadata in hpde.io/naming_auths.json

--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -58,124 +58,104 @@ priority when assigning a naming authority, as follows:
 		<dd>
 			<table>
 				<tr><th>Authority</th><th>Description</th></tr>
-				<tr><td valign="top">ASWS</td><td>Australian Space Weather Services (ASWS)<br>
+<tr><td valign="top">ASWS</td><td>Australian Space Weather Services (ASWS)<br>
 				Assigns resource IDs for data registered in the Australian Space Weather Services (ASWS).<br>
-				Website: <a class="ext" href=" http://www.sws.bom.gov.au/World_Data_Centre"> http://www.sws.bom.gov.au/World_Data_Centre</a>
+				Website: <a class="ext" href=" http://www.sws.bom.gov.au/World_Data_Centre">http://www.sws.bom.gov.au/World_Data_Centre</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/ASWS">https://github.com/hpde/ASWS</a>
 				</td></tr>
-					
-				<tr><td  valign="top">CCMC</td><td>Community Coordinated Modeling Center (CCMC)<br>
+<tr><td valign="top">ASWS</td><td>Community Coordinated Modeling Center (CCMC)<br>
 				Assigns resource IDs for data available from the Community Coordinated Modeling Center (CCMC).<br>
-				Website: <a class="ext" href="http://ccmc.gsfc.nasa.gov/">http://ccmc.gsfc.nasa.gov/</a><br>
+				Website: <a class="ext" href=" http://ccmc.gsfc.nasa.gov/">http://ccmc.gsfc.nasa.gov/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/CCMC">https://github.com/hpde/CCMC</a>
 				</td></tr>
-					
-				<tr><td  valign="top">CNES</td><td>Centre National d'Etudes Spatiales<br>
+<tr><td valign="top">ASWS</td><td>Centre National d'Etudes Spatiales<br>
 				Assigns resource IDs for data available from the Centre National d'Etudes Spatiales (CNES).<br>
-				Website: <a class="ext" href="https://cnes.fr/en">https://cnes.fr/en</a><br>
+				Website: <a class="ext" href=" https://cnes.fr/en">https://cnes.fr/en</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/CNES">https://github.com/hpde/CNES</a>
 				</td></tr>
-					
-				<tr><td  valign="top">CSA</td><td>Canadian Space Agency (CSA)<br>
+<tr><td valign="top">ASWS</td><td>Canadian Space Agency (CSA)<br>
 				Assigns resource IDs for data registered in the Canadian Space Agency (CSA).<br>
-				Website: <a class="ext" href="https://www.asc-csa.gc.ca/">https://www.asc-csa.gc.ca/</a><br>
+				Website: <a class="ext" href=" https://www.asc-csa.gc.ca/">https://www.asc-csa.gc.ca/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/CSA">https://github.com/hpde/CSA</a>
 				</td></tr>
-					
-				<tr><td  valign="top">CSSDP</td><td>Canadian Space Science Data Portal (CSSDP)<br>
+<tr><td valign="top">ASWS</td><td>Canadian Space Science Data Portal (CSSDP)<br>
 				Assigns resource IDs for data registered in the Canadian Space Science Data Portal (CSSDP).<br>
-				Website: <a class="ext" href="http://www.cssdp.ca/">http://www.cssdp.ca/</a><br>
+				Website: <a class="ext" href=" http://www.cssdp.ca/">http://www.cssdp.ca/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/CSSDP">https://github.com/hpde/CSSDP</a>
 				</td></tr>
-					
-				<tr><td  valign="top">DLR</td><td>Deutsches Zentrum für Luft- und Raumfahrt (DLR)<br>
+<tr><td valign="top">ASWS</td><td>Deutsches Zentrum für Luft- und Raumfahrt (DLR)<br>
 				Assigns resource IDs for data registered in the Deutsches Zentrum für Luft- und Raumfahrt (DLR).<br>
-				Website: <a class="ext" href="http://www.cssdp.ca/">https://www.dlr.de/</a><br>
+				Website: <a class="ext" href=" https://www.dlr.de/">https://www.dlr.de/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/DLR">https://github.com/hpde/DLR</a>
 				</td></tr>
-					
-				<tr><td  valign="top">ESA</td><td>European Space Agency (ESA)<br>
-				Assigns resource IDs for data available from the European Space Agency (ESA)<br>
-				Website: <a class="ext" href="http://www.esa.int/ESA">http://www.esa.int/ESA</a><br>
+<tr><td valign="top">ASWS</td><td>European Space Agency (ESA)<br>
+				Assigns resource IDs for data available from the European Space Agency (ESA).<br>
+				Website: <a class="ext" href=" http://www.esa.int/ESA">http://www.esa.int/ESA</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/ESA">https://github.com/hpde/ESA</a>
 				</td></tr>
-					
-				<tr><td  valign="top">FMI</td><td>Finnish Meteorlogical Institute (FMI)<br>
-				Assigns resource IDs for data available from the Finnish Meteorlogical Institute (FMI) Space and Earth Observation Centre<br>
-				Website: <a class="ext" href="https://space.fmi.fi/">https://space.fmi.fi/</a><br>
+<tr><td valign="top">ASWS</td><td>Finnish Meteorlogical Institute (FMI)<br>
+				Assigns resource IDs for data available from the Finnish Meteorlogical Institute (FMI) Space and Earth Observation Centre.<br>
+				Website: <a class="ext" href=" https://space.fmi.fi/">https://space.fmi.fi/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/FMI">https://github.com/hpde/FMI</a>
 				</td></tr>
-					
-				<tr><td  valign="top">INAF</td><td>Istituto Nazionale Di Astrofisica (National Institue for Astrophysics)<br>
-				Assigns resource IDs for data available from the Istituto Nazionale Di Astrofisica (INAF).<br>
-				Website: <a class="ext" href="http://www.inaf.it/">http://www.inaf.it/</a><br>
-				Metadata Repository: <a class="ext" href="https://github.com/hpde/INAF">https://github.com/hpde/INAF</a>
-				</td></tr>
-					
-				<tr><td  valign="top">INSU</td><td>Institut national des sciences de l'Univers (INSU)<br>
-				Assigns resource IDs for data available from the Institut national des sciences de l'Univers (INSU).<br>
-				Website: <a class="ext" href="https://www.insu.cnrs.fr/">https://www.insu.cnrs.fr/</a><br>
-				Metadata Repository: <a class="ext" href="https://github.com/hpde/ISU">https://github.com/hpde/INSU</a>
-				</td></tr>
-					
-				<tr><td  valign="top">ISWI</td><td>International Space Weather Initiative (ISWI)<br>
-				Assigns resource IDs for data available from the International Space Weather Initiative (ISWI).<br>
-				Website: <a class="ext" href="http://www.iswi-secretariat.org/">http://www.iswi-secretariat.org/</a><br>
-				Metadata Repository: <a class="ext" href="https://github.com/hpde/ISWI">https://github.com/hpde/ISWI</a>
-				</td></tr>
-
-				<tr><td  valign="top">IUGONET</td><td>Inter-university Upper atmosphere Global Observation NETwork (IUGONET)<br>
-				Assigns resource IDs for data available from the Inter-university Upper atmosphere Global Observation NETwork (IUGONET).<br>
-				Website: <a class="ext" href="http://www.iugonet.org/">http://www.iugonet.org/</a><br>
-				Metadata Repository: <a class="ext" href="http://search.iugonet.org/list.jsp">http://search.iugonet.org/list.jsp</a>
-				</td></tr>
-					
-					
-				<tr><td  valign="top">KASI</td><td>Korean Astronomy and Space Science Institute (KASI)<br>
-				Assigns resource IDs for data available from the Korean Astronomy and Space Science Institute (KASI).<br>
-				Website: <a class="ext" href="https://www.kasi.re.kr/eng/index">https://www.kasi.re.kr/eng/index</a><br>
-				Metadata Repository: <a class="ext" href="https://github.com/hpde/KASI">https://github.com/hpde/KASI</a>
-				</td></tr>
-					
-				<tr><td  valign="top">GBO</td><td>Ground Based Observatories (GBO)<br>
+<tr><td valign="top">ASWS</td><td>Ground Based Observatories (GBO)<br>
 				Assigns resource IDs for data available from the ground based observatories (GBO).<br>
-				Website: <a class="ext" href="http://vspo.gsfc.nasa.gov">http://vspo.gsfc.nasa.gov</a><br>
+				Website: <a class="ext" href=" http://vspo.gsfc.nasa.gov">http://vspo.gsfc.nasa.gov</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/GBO">https://github.com/hpde/GBO</a>
 				</td></tr>
-					
-				<tr><td  valign="top">JAXA</td><td>Japan Aerospace Exploration Agency (JAXA)<br>
+<tr><td valign="top">ASWS</td><td>Istituto Nazionale Di Astrofisica (National Institue for Astrophysics)<br>
+				Assigns resource IDs for data available from the Istituto Nazionale Di Astrofisica (INAF).<br>
+				Website: <a class="ext" href=" http://www.inaf.it/">http://www.inaf.it/</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/INAF">https://github.com/hpde/INAF</a>
+				</td></tr>
+<tr><td valign="top">ASWS</td><td>Institut national des sciences de l'Univers (INSU)<br>
+				Assigns resource IDs for data available from the Institut national des sciences de l'Univers (INSU).<br>
+				Website: <a class="ext" href=" https://www.insu.cnrs.fr/">https://www.insu.cnrs.fr/</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/INSU">https://github.com/hpde/INSU</a>
+				</td></tr>
+<tr><td valign="top">ASWS</td><td>International Space Weather Initiative (ISWI)<br>
+				Assigns resource IDs for data available from the International Space Weather Initiative (ISWI).<br>
+				Website: <a class="ext" href=" http://www.iswi-secretariat.org/">http://www.iswi-secretariat.org/</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/ISWI">https://github.com/hpde/ISWI</a>
+				</td></tr>
+<tr><td valign="top">ASWS</td><td>Inter-university Upper atmosphere Global Observation NETwork (IUGONET)<br>
+				Assigns resource IDs for data available from the Inter-university Upper atmosphere Global Observation NETwork (IUGONET).<br>
+				Website: <a class="ext" href=" http://www.iugonet.org/">http://www.iugonet.org/</a>
+				Metadata Repository: <a class="ext" href="http://search.iugonet.org/list.jsp">http://search.iugonet.org/list.jsp</a>
+				</td></tr>
+<tr><td valign="top">ASWS</td><td>Japan Aerospace Exploration Agency (JAXA)<br>
 				Assigns resource IDs for data available from the Japan Aerospace Exploration Agency (JAXA).<br>
-				Website: <a class="ext" href="http://global.jaxa.jp/">http://global.jaxa.jp/</a><br>
+				Website: <a class="ext" href=" http://global.jaxa.jp/">http://global.jaxa.jp/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/JAXA">https://github.com/hpde/JAXA</a>
 				</td></tr>
-					
-				<tr><td  valign="top">NASA</td><td>National Aeronautics and Space Administration (NASA)<br>
-				Assigns resource IDs for data generated through the National Aeronautics and Space Administration (NASA).<br>
-				Website: <a class="ext" href="https://nasa.gov/">https://nasa.gov/</a><br>
-				Metadata Repository: <a class="ext" href="https://github.com/hpde/NASA">https://github.com/hpde/NASA</a>
+<tr><td valign="top">ASWS</td><td>Korean Astronomy and Space Science Institute (KASI)<br>
+				Assigns resource IDs for data available from the Korean Astronomy and Space Science Institute (KASI).<br>
+				Website: <a class="ext" href=" https://www.kasi.re.kr/eng/index">https://www.kasi.re.kr/eng/index</a>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/KASI">https://github.com/hpde/KASI</a>
 				</td></tr>
-					
-				<tr><td  valign="top">NOAA</td><td>National Oceanic and Atmospheric Administration (NOAA)<br>
+<tr><td valign="top">ASWS</td><td>National Aeronautics and Space Administration (NASA)<br>
+				Assigns resource IDs for data generated through the National Aeronautics and Space Administration (NASA).<br>
+				Website: <a class="ext" href=" https://nasa.gov/">https://nasa.gov/</a>
+				Metadata Repository: <a class="ext" href=" https://github.com/hpde/NASA"> https://github.com/hpde/NASA</a>
+				</td></tr>
+<tr><td valign="top">ASWS</td><td>National Oceanic and Atmospheric Administration (NOAA)<br>
 				Assigns resource IDs for data registered in National Oceanic and Atmospheric Administration (NOAA) data systems.<br>
-				Website: <a class="ext" href="http://www.nesdis.noaa.gov/">http://www.nesdis.noaa.gov/</a><br>
+				Website: <a class="ext" href=" http://www.nesdis.noaa.gov/">http://www.nesdis.noaa.gov/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/NOAA">https://github.com/hpde/NOAA</a>
 				</td></tr>
-					
-				<tr><td  valign="top">NSF</td><td>National Science Foundation (NSF)<br>
-				Assigns resource IDs for data available from the National Science Foundation (NSF)<br>
-				Website: <a class="ext" href="https://www.nsf.gov/">https://www.nsf.gov/</a><br>
+<tr><td valign="top">ASWS</td><td>National Science Foundation (NSF)<br>
+				Assigns resource IDs for data available from the National Science Foundation (NSF).<br>
+				Website: <a class="ext" href=" https://www.nsf.gov/">https://www.nsf.gov/</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/NSF">https://github.com/hpde/NSF</a>
 				</td></tr>
-					
-				<tr><td  valign="top">SMWG</td><td>SPASE Metadata Working Group (SMWG)<br>
+<tr><td valign="top">ASWS</td><td>SPASE Metadata Working Group (SMWG)<br>
 				The community location for entities such as persons, observatories, instruments, repositories, registries and services.<br>
-				Website: <a class="ext" href="http://www.spase-group.org/registry">http://www.spase-group.org/registry</a><br>
+				Website: <a class="ext" href=" http://www.spase-group.org/registry">http://www.spase-group.org/registry</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/SMWG">https://github.com/hpde/SMWG</a>
 				</td></tr>
-					
-				<tr><td  valign="top">UOULU</td><td>University of Oulu (UOULU)<br>
-				Assigns resource IDs for data available from the University of Oulu (UOULU)<br>
-				Website: <a class="ext" href="http://www.spase-group.org/registry">http://www.spase-group.org/registry</a><br>
+<tr><td valign="top">ASWS</td><td>University of Oulu (UOULU)<br>
+				Assigns resource IDs for data available from the University of Oulu (UOULU).<br>
+				Website: <a class="ext" href=" http://www.spase-group.org/registry">http://www.spase-group.org/registry</a>
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/UOULU">https://github.com/hpde/UOULU</a>
 				</td></tr>
 		</table>			
