Added fourth naming authority rule

--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -48,6 +48,7 @@ priority when assigning a naming authority, as follows:
 <li>Major oversight/funding agency (CNES, ESA, JAXA, NASA, NOAA, NSF,…etc.) for resources from missions, observatories, instruments or investigations that fall well within an agency management;</li>
 <li>Overall long-term project name (e.g., ISWI, GONG, IUGONET, Nançay,…etc.) when an infrastructure-like project receives multiple sponsorships or has multiple partners that are separately funded. </li>
 <li>Instrument PI institution if none of the above applies.</li>
+<li>SMWG will continue to be the Naming Authority for Person resources.</li>
 
 </section>
 <hr/>
