Pulled the link to the simulation version of the editor

--- a/site/pages/tools/editor/index.hbs
+++ b/site/pages/tools/editor/index.hbs
@@ -21,11 +21,7 @@ title: SPASE Editor
       the XML representation of the description.
    </p>
    <p>
-     There are two versions of the editor:
-     <dl>
-        <dt> <a target='_blank' href="https://xmleditor.spase-utilities.org/">base</a></dt><dd>Resource descriptions for observed data</dd>
-        <dt> <a target='_blank' href="https://xmleditor.spase-utilities.org/?simulation=true">simulation</a><dt><dd>Resource descriptions for simulations and models, plus generated results.</dd>
-     </dl>
+     <a target='_blank' href="https://xmleditor.spase-utilities.org/">Web-based editor</a> - Resource descriptions for observed data, simulations and models, plus generated results.
    </p>
    <p>
       This tool was developed by NASA's SPASE Metadata Working Team (SWMT).
